# connect4-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/connect4_core/: __init__.py  board.py  column.py  connect4.py  disk.py  util.py
src/connect4_server/: auth.py  broadcaster.py  connect4.py  database.py  game.py  main.py
src/connect4_server/auth/: constants.py  dependencies.py  exceptions.py  router.py  schemas.py  services.py  utils.py
src/connect4_server/game/: dependencies.py  exceptions.py  router.py  schemas.py  services.py  utils.py
src/connect4_server/user/: dependencies.py  exceptions.py  router.py  schemas.py  services.py
tests/: test_board.py  test_disk.py
